--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ theme = "blackburn"
   googleAnalytics = "UA-74906880-1"
   disqus = "listenzhang"
   # CSS name for highlight.js
-  highlightjs = "atelier-heath-light"
+  highlightjs = "github"
   dateFormat = "02 Jan 2006, 15:04"
 
 [menu]
